:lipstick: Correctly align status items

--- a/src/pages/ProfilePage.scss
+++ b/src/pages/ProfilePage.scss
@@ -102,12 +102,11 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
       padding: 2rem;
 
       @media(max-width: $breakpoint-small) {
         flex-direction: column;
-        align-items: flex-start;
       }
     }
   }
